Allow changing debug panel height

--- a/HigherSidebar/HigherSidebar.csproj
+++ b/HigherSidebar/HigherSidebar.csproj
@@ -59,6 +59,10 @@
       <HintPath>$(GAME_PATH)\Stacklands_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>false</Private>
     </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>$(GAME_PATH)\Stacklands_Data\Managed\UnityEngine.UI.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mod.cs" />
