--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,5 @@
 {
+	"id": "com.maxsch.stacklands.highersidebar",
 	"name": "HigherSidebar",
-	"description": "Increases the height of the info text box",
-	"version_number": "0.3.0",
-	"website_url": "https://github.com/MSchmoecker/StacklandsHigherUI",
-	"dependencies": [
-		"BepInEx-BepInExPack_Stacklands-5.4.2100"
-	]
+	"version": "0.3.0"
 }
