--- a/HigherSidebar/HigherSidebar.csproj
+++ b/HigherSidebar/HigherSidebar.csproj
@@ -80,14 +80,11 @@
   <PropertyGroup>
     <GAME_PATH>E:\Programme\Steam\steamapps\common\Stacklands</GAME_PATH>
     <OUTPUT_PATH>$(AppData)/../LocalLow/sokpop/Stacklands/Mods/HigherSidebar</OUTPUT_PATH>
-    <TMP_OUTPUT_PATH>$(TargetDir)/tmp</TMP_OUTPUT_PATH>
   </PropertyGroup>
   <Target Name="AfterBuild">
-    <RemoveDir Directories="$(TMP_OUTPUT_PATH)" />
     <MakeDir Directories="$(OUTPUT_PATH)" />
-    <Copy SourceFiles="$(TargetDir)$(TargetFileName)" DestinationFiles="$(TMP_OUTPUT_PATH)/com.maxsch.stacklands.highersidebar.dll" />
-    <Copy SourceFiles="../manifest.json" DestinationFolder="$(TMP_OUTPUT_PATH)" />
-    <ZipDirectory Overwrite="true" SourceDirectory="$(TMP_OUTPUT_PATH)" DestinationFile="$(OUTPUT_PATH)/HigherSidebar.zip" />
-    <Unzip SourceFiles="$(OUTPUT_PATH)/HigherSidebar.zip" DestinationFolder="$(OUTPUT_PATH)" />
+    <Copy SourceFiles="$(TargetDir)$(TargetFileName)" DestinationFiles="$(OUTPUT_PATH)/com.maxsch.stacklands.highersidebar.dll" />
+    <Copy SourceFiles="../manifest.json" DestinationFolder="$(OUTPUT_PATH)" />
+    <Copy SourceFiles="../icon.png" DestinationFolder="$(OUTPUT_PATH)" />
   </Target>
 </Project>
