--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
 	"id": "com.maxsch.stacklands.highersidebar",
 	"name": "HigherSidebar",
-	"version": "0.4.0"
+	"version": "0.4.0",
+	"workshopId": 2995428012
 }
